<resources>
    <string name="app_name">Group6A_FinalProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_new_user">Register</string>
    <string name="loginOnClick">loginOnClick</string>
    <string name="registerOnClick">registerOnClick</string>
    <string name="title_activity_main_profile">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="editProfileOnClick">editProfileOnClick</string>
    <string name="saveProfileOnClick">saveProfileOnClick</string>
    <string name="signUpOnClick">signUpOnClick</string>
    <string name="cancelOnClick">cancelOnClick</string>
    <string name="editAvatarOnClick">editAvatarOnClick</string>
    <string name="title_activity_create_album">Create Album</string>
    <string name="title_activity_album">Album Photos</string>
    <string name="addAlbumThumbOnClick">addAlbumThumbOnClick</string>
    <string name="createAlbumOnClick">createAlbumOnClick</string>
    <string name="addPhotoOnClick">addPhotoOnClick</string>
    <string name="title_activity_add_photo">Add Photo</string>
    <string name="insertPhotoOnClick">insertPhotoOnClick</string>
    <string name="savePictureOnClick">savePictureOnClick</string>
    <string name="addPhotoCancelOnClick">addPhotoCancelOnClick</string>
    <string name="title_activity_user_directory">User Directory</string>
    <string name="title_activity_user_inbox">Inbox</string>
    <string name="composeMessageOnClick">composeMessageOnClick</string>
    <string name="title_activity_compose_message">Compose Message</string>
    <string name="composeMessageSendOnClick">composeMessageSendOnClick</string>
    <string name="toFieldOnClick">toFieldOnClick</string>
    <string name="title_activity_albums_list">Albums</string>
    <string name="ownerTitle">Owner:</string>
    <string name="title_activity_invite_users">Share Album</string>
    <string name="shareButtonLabel">Share</string>
    <string name="shareFieldOnClick">shareFieldOnClick </string>
    <string name="shareCancelOnClick">shareCancelOnClick</string>
    <string name="deleteUserOnClick">deleteUserOnClick</string>
    <string name="shareButtonOnClick">shareButtonOnClick</string>
    <string name="userPrivacy">Public Profile?</string>
    <string name="GetNotifications">Get Notifications?</string>
    <string name="saveAlbumOnClick">saveAlbumOnClick</string>
    <string name="saveAlbum">Save</string>
    <string name="title_activity_view_message">View Message</string>
    <string name="replyOnClick">replyOnClick</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_add_shared_user_photo">Add Photo</string>
    <string name="deleteSharedOnClick">deleteSharedOnClick</string>
    <string name="saveSharedOnClick">saveSharedOnClick</string>
    <string name="cancelSharedOnClick">cancelSharedOnClick</string>
    <string name="sharedPhotoOnClick">sharedPhotoOnClick</string>
    <string name="facebook_app_id">560279687457387</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo_slider">Title</string>
    <string name="facebookLoginOnClick">facebookLoginOnClick</string>
    <string name="twitterLoginOnClick">twitterLoginOnClick</string>
    <string name="attachImageOnClick">attachImageOnClick</string>
</resources>
