<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_finalproject.group6a_finalproject.InviteUsers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewShare"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextShare"
        android:layout_below="@+id/textViewShare"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:layout_toLeftOf="@+id/imageViewRemoveUser"
        android:layout_toStartOf="@+id/imageViewRemoveUser"
        android:editable="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shareButtonLabel"
        android:id="@+id/buttonShare"
        android:onClick="@string/shareButtonOnClick"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textViewShare"
        android:layout_toStartOf="@+id/textViewShare" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/buttonShareCancel"
        android:onClick="@string/shareCancelOnClick"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textViewShare"
        android:layout_toEndOf="@+id/textViewShare" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewRemoveUser"
        android:src="@android:drawable/ic_delete"
        android:layout_alignTop="@+id/editTextShare"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="@string/deleteUserOnClick" />
</RelativeLayout>
