<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_finalproject.group6a_finalproject.AddPhoto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewAddPhotoThumb"
        android:maxWidth="400px"
        android:maxHeight="400px"
        android:minWidth="400px"
        android:minHeight="400px"
        android:src="@android:drawable/ic_menu_myplaces"
        android:layout_centerHorizontal="true"
        android:onClick="@string/insertPhotoOnClick" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAddPictureName"
        android:hint="Photo Title"
        android:gravity="center"
        android:layout_below="@+id/imageViewAddPhotoThumb"
        android:layout_alignRight="@+id/imageViewAddPhotoThumb"
        android:layout_alignEnd="@+id/imageViewAddPhotoThumb"
        android:layout_alignLeft="@+id/imageViewAddPhotoThumb"
        android:layout_alignStart="@+id/imageViewAddPhotoThumb" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/buttonAddPhotoSave"
            android:onClick="@string/savePictureOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/buttonAddPhotoCancel"
            android:onClick="@string/addPhotoCancelOnClick" />
    </LinearLayout>

</RelativeLayout>
