<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_finalproject.group6a_finalproject.CreateAlbumActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCreateAlbumName"
        android:layout_alignParentTop="true"
        android:hint="Album Title"
        android:layout_alignRight="@+id/imageViewCreateAlbumThumb"
        android:layout_alignEnd="@+id/imageViewCreateAlbumThumb"
        android:layout_alignLeft="@+id/imageViewCreateAlbumThumb"
        android:layout_alignStart="@+id/imageViewCreateAlbumThumb"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewCreateAlbumThumb"
        android:maxWidth="400px"
        android:maxHeight="400px"
        android:minWidth="400px"
        android:minHeight="400px"
        android:src="@android:drawable/ic_menu_myplaces"
        android:onClick="@string/addAlbumThumbOnClick"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/editTextCreateAlbumName"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Private: "
        android:id="@+id/switchAlbumPrivacy"
        android:enabled="true"
        android:textOn="No"
        android:textOff="Yes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:showText="true"
        android:layout_below="@+id/imageViewCreateAlbumThumb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create"
            android:id="@+id/buttonCreateAlbum"
            android:onClick="@string/createAlbumOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/buttonCancelAlbum"
            android:onClick="@string/cancelOnClick" />
    </LinearLayout>

</RelativeLayout>
