<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_finalproject.group6a_finalproject.AddSharedUserPhoto">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSharedPhotoTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.parse.ParseImageView
        android:layout_width="@dimen/bigPictureWidth"
        android:layout_height="@dimen/bigPicttureHeight"
        android:id="@+id/imageViewSharedPhotoThumbnail"
        android:layout_below="@+id/editTextSharedPhotoTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textViewAddedBy"
        android:layout_below="@+id/imageViewSharedPhotoThumbnail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textViewAddedTo"
        android:layout_alignTop="@+id/textViewAddedBy"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/buttonDeleteSharedPhoto"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="@string/deleteSharedOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/buttonSaveSharedPhoto"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="@string/saveSharedOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/buttonCancelSharing"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textViewAddedTo"
        android:layout_alignEnd="@+id/textViewAddedTo"
        android:onClick="@string/cancelSharedOnClick" />
</RelativeLayout>
